--- a/betting-game-angular/src/app/components/navigation/navigation.component.html
+++ b/betting-game-angular/src/app/components/navigation/navigation.component.html
@@ -6,5 +6,8 @@
     <li class="navbar-link-wrapper ml-4">
         <a routerLink="/matchday" class="navbar__link relative text-xl text-blue-300 hover:text-white">Matchday</a>
     </li>
+    <li class="navbar-link-wrapper ml-4">
+      <a routerLink="/table" class="navbar__link relative text-xl text-blue-300 hover:text-white">Table</a>
+    </li>
   </ul>
 </nav>
