--- a/betting-game-angular/src/app/components/matchday/matchday.component.html
+++ b/betting-game-angular/src/app/components/matchday/matchday.component.html
@@ -1,16 +1,32 @@
 <div>
+
+  <div *ngIf="loading$ | async">Loading ...</div>
+
   <div class="max-w-screen-xl xl:w-1/3 lg:w-1/2 md:w-2/3 sm:w-1 rounded flex flex-col mb-4">
     <div class="px-6 py-4 self-center">
-      Matchday No 1
+      <div *ngIf="(matchday$ | async) as matchday;">
+        {{ matchday.name }}
+        <div class="small-grey-font">({{ matchday.firstMatchStartDateTime }} - {{ matchday.lastMatchStartDateTime }})</div>
+      </div>
     </div>
 
-    <ul class="my-class">
-      <li *ngFor="let match of (matchday$ | async)?.matches; let index" class="items-center" [ngClass]="{'bg-gray-300': index%2===0 }">
+    <ul>
+      <li *ngFor="let match of (matchday$ | async)?.matches; let i = index" class="items-center"
+          [ngClass]="{'bg-gray-300': i % 2 === 0 }">
         <div class="flex flex-row rounded overflow-hidden shadow-lg rounded h-10 py-3 match">
-          <div class="px-2 flex-1 text-right">{{match.home}}</div>
-          <div class="px-2 w-1/12" *ngIf="(matchday$ | async)?.done">{{match.goalsHome + ':' + match.goalsGuest}}</div>
-          <div *ngIf="!(matchday$ | async)?.done" class="px-2 w-1/12"></div>
-          <div class="px-2 flex-1">{{match.guest}}</div>
+          <div class="px-2 flex-1 text-right">{{match.home.name}}</div>
+          <div style="display: flex; justify-content: center; align-items: center;">
+            <img [src]=match.home.logo width="25px;" alt="logo">
+          </div>
+          <div class="px-2 w-1/12"
+               *ngIf="match.matchIsFinished; else unfinished">{{match.result.final.goalsHome + ':' + match.result.final.goalsGuest}}</div>
+          <ng-template #unfinished>
+            <div class="px-2 w-1/4 small-grey-font" style="text-align: center;">not finished</div>
+          </ng-template>
+          <div style="display: flex; justify-content: center; align-items: center;">
+            <img [src]=match.guest.logo width="25px;" alt="logo">
+          </div>
+          <div class="px-2 flex-1">{{match.guest.name}}</div>
         </div>
       </li>
     </ul>
